--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/Tanmay17/biofourmis-assignment#readme",
   "dependencies": {
+    "csv-parser": "^2.3.3",
     "express": "^4.17.1",
     "joi": "^17.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
