--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "csv-parser": "^2.3.3",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
-    "joi": "^17.2.1",
+    "express-validator": "^6.6.1",
     "json-2-csv": "^3.7.8",
     "moment": "^2.29.1"
   },
